--- a/main.css
+++ b/main.css
@@ -6,6 +6,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
 }
 :root {
   --bg-clr: hsl(0, 0%, 15%);
